--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,13 +10,13 @@ kapt {
 }
 
 android {
-    compileSdk 33
+    compileSdk Versions.compileSdkVersion
     resourcePrefix "app_"
 
     defaultConfig {
         applicationId "com.studio.ladon"
-        minSdk 23
-        targetSdk 33
+        minSdk Versions.minSdkVersion
+        targetSdk Versions.targetSdkVersion
         versionCode 1
         versionName "1.0"
 
@@ -40,7 +40,7 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation Libs.core_ktx
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
