--- a/lib_ability/build.gradle
+++ b/lib_ability/build.gradle
@@ -4,11 +4,11 @@ plugins {
 }
 
 android {
-    compileSdk 33
+    compileSdk Versions.compileSdkVersion
     resourcePrefix "ability_"
     defaultConfig {
-        minSdk 23
-        targetSdk 33
+        minSdk Versions.minSdkVersion
+        targetSdk Versions.targetSdkVersion
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -31,7 +31,7 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation Libs.core_ktx
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.4.0'
     testImplementation 'junit:junit:4.13.2'
