--- a/lib_base/build.gradle
+++ b/lib_base/build.gradle
@@ -6,11 +6,11 @@ plugins {
 
 
 android {
-    compileSdk 33
+    compileSdk Versions.compileSdkVersion
     resourcePrefix "base_"
     defaultConfig {
-        minSdk 23
-        targetSdk 33
+        minSdk Versions.minSdkVersion
+        targetSdk Versions.targetSdkVersion
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -33,7 +33,7 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation Libs.core_ktx
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
