--- a/lib_common/build.gradle
+++ b/lib_common/build.gradle
@@ -11,11 +11,11 @@ kapt {
 
 
 android {
-    compileSdk 33
+    compileSdk Versions.compileSdkVersion
     resourcePrefix "common_"
     defaultConfig {
-        minSdk 23
-        targetSdk 33
+        minSdk Versions.minSdkVersion
+        targetSdk Versions.targetSdkVersion
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -44,7 +44,7 @@ dependencies {
     implementation 'com.alibaba:arouter-api:1.5.2'
     kapt 'com.alibaba:arouter-compiler:1.5.2'
 
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation Libs.core_ktx
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.4.0'
     testImplementation 'junit:junit:4.13.2'
