--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'org.jetbrains.kotlin.kapt'
 }
+apply from:'../global.gradle'
 kapt {
     arguments {
         arg("AROUTER_MODULE_NAME", project.getName())
@@ -10,45 +11,20 @@ kapt {
 }
 
 android {
-    compileSdk Versions.compileSdkVersion
-    resourcePrefix "app_"
+
+    resourcePrefix Prefix.app
 
     defaultConfig {
-        applicationId "com.studio.ladon"
-        minSdk Versions.minSdkVersion
-        targetSdk Versions.targetSdkVersion
-        versionCode 1
-        versionName "1.0"
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        applicationId Builds.applicationId
+        versionCode Builds.versionCode
+        versionName Builds.versionName
     }
 
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    kotlinOptions {
-        jvmTarget = '1.8'
-    }
 }
 
 dependencies {
-
-    implementation Libs.core_ktx
-    implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    implementation project(":module_pet")
-    implementation project(":lib_common")
-    implementation 'com.alibaba:arouter-api:1.5.2'
-    kapt 'com.alibaba:arouter-compiler:1.5.2'
+    implementation project(Modules.module_pet)
+    implementation project(Modules.lib_common)
+    implementation Libs.arouter_api
+    kapt Libs.arouter_compiler
 }
