--- a/lib_common/build.gradle
+++ b/lib_common/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'org.jetbrains.kotlin.kapt'
 }
+apply from:'../global.gradle'
 kapt {
     arguments {
         arg("AROUTER_MODULE_NAME", project.getName())
@@ -11,45 +12,17 @@ kapt {
 
 
 android {
-    compileSdk Versions.compileSdkVersion
-    resourcePrefix "common_"
-    defaultConfig {
-        minSdk Versions.minSdkVersion
-        targetSdk Versions.targetSdkVersion
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        consumerProguardFiles "consumer-rules.pro"
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    kotlinOptions {
-        jvmTarget = '1.8'
-    }
+    resourcePrefix Prefix.common
 }
 
 dependencies {
-    api project(":lib_base")
-    api 'com.tencent:mmkv:1.2.13'
-    api 'com.guolindev.permissionx:permissionx:1.6.4'
+    api project(Modules.lib_base)
+    api Libs.mmkv
+    api Libs.permissionx
 
-    implementation 'com.alibaba:arouter-api:1.5.2'
-    kapt 'com.alibaba:arouter-compiler:1.5.2'
+    implementation Libs.arouter_api
+    kapt Libs.arouter_compiler
 
-    implementation Libs.core_ktx
-    implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'com.google.android.material:material:1.4.0'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
 
 }
