--- a/module_pet/build.gradle
+++ b/module_pet/build.gradle
@@ -4,47 +4,20 @@ plugins {
     id 'org.jetbrains.kotlin.kapt'
 }
 
+apply from:'../global.gradle'
+
 kapt {
     arguments {
         arg("AROUTER_MODULE_NAME", project.getName())
     }
 }
 android {
-    compileSdk Versions.compileSdkVersion
-    resourcePrefix "pet_"
-    defaultConfig {
-        minSdk Versions.minSdkVersion
-        targetSdk Versions.targetSdkVersion
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        consumerProguardFiles "consumer-rules.pro"
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    kotlinOptions {
-        jvmTarget = '1.8'
-    }
+    resourcePrefix Prefix.pet
 }
 
 dependencies {
 
-    implementation Libs.core_ktx
-    implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    implementation project(":lib_common")
-    implementation 'com.alibaba:arouter-api:1.5.2'
-    kapt 'com.alibaba:arouter-compiler:1.5.2'
+    implementation project(Modules.lib_common)
+    implementation Libs.arouter_api
+    kapt Libs.arouter_compiler
 }
