增加isModule判断是否为单独组件 编辑对应manifest文件 测试arouter跳转 完善依赖引用内容

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,9 @@ android {
 }
 
 dependencies {
-    implementation project(Modules.module_pet)
+    if (!isModule.toBoolean()){
+        implementation project(Modules.module_pet)
+    }
     implementation project(Modules.lib_common)
     implementation Libs.arouter_api
     kapt Libs.arouter_compiler
