--- a/global.gradle
+++ b/global.gradle
@@ -1,4 +1,3 @@
-
 android {
     compileSdk Versions.compileSdkVersion
     defaultConfig {
@@ -25,12 +24,11 @@ android {
 }
 
 dependencies {
-
     implementation Libs.core_ktx
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation Libs.appcompat
+    implementation Libs.material
+    implementation Libs.constraintlayout
+    testImplementation Libs.junit
+    androidTestImplementation Libs.junit_ext
+    androidTestImplementation Libs.espresso_core
 }
