--- a/lib_ability/src/main/AndroidManifest.xml
+++ b/lib_ability/src/main/AndroidManifest.xml
@@ -1,5 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.studio.lib_ability">
+    <application
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/ability_module_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:supportsRtl="true"
+        android:theme="@style/Theme.Ladon">
+        <activity
+            android:name=".AbilityMainActivity"
+            android:exported="true">
+        </activity>
+    </application>
 
 </manifest>
