--- a/lib_ability/src/main/module/AndroidManifest.xml
+++ b/lib_ability/src/main/module/AndroidManifest.xml
@@ -1,20 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.studio.module_pet">
+    package="com.studio.lib_ability">
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/pet_module_name"
+        android:label="@string/ability_module_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Ladon">
+        <activity
+            android:name=".AbilityMainActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-        <activity
-            android:name=".view.MainActivity"
-            android:exported="false">
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
-        <activity
-            android:name=".view.TestActivity"
-            android:exported="false" />
     </application>
+
 </manifest>
