--- a/module_pet/build.gradle
+++ b/module_pet/build.gradle
@@ -1,10 +1,14 @@
 plugins {
-    id 'com.android.library'
+
     id 'org.jetbrains.kotlin.android'
     id 'org.jetbrains.kotlin.kapt'
 }
-
-apply from:'../global.gradle'
+if (isModule.toBoolean()) {
+    apply plugin: 'com.android.application'
+} else {
+    apply plugin: 'com.android.library'
+}
+apply from: '../global.gradle'
 
 kapt {
     arguments {
@@ -13,10 +17,19 @@ kapt {
 }
 android {
     resourcePrefix Prefix.pet
+
+    sourceSets {
+        main {
+            if (isModule.toBoolean()) {
+                manifest.srcFile 'src/main/module/AndroidManifest.xml'
+            } else {
+                manifest.srcFile 'src/main/AndroidManifest.xml'
+            }
+        }
+    }
 }
 
 dependencies {
-
     implementation project(Modules.lib_common)
     implementation Libs.arouter_api
     kapt Libs.arouter_compiler
