--- a/settings.gradle
+++ b/settings.gradle
@@ -17,4 +17,4 @@ include ':app'
 include ':lib_base'
 include ':lib_common'
 include ':lib_ability'
-include ':module_pet'
+include ':module_visitor'
