--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,9 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'org.jetbrains.kotlin.kapt'
 }
+
 apply from:'../global.gradle'
+
 kapt {
     arguments {
         arg("AROUTER_MODULE_NAME", project.getName())
@@ -11,7 +13,6 @@ kapt {
 }
 
 android {
-
     resourcePrefix Prefix.app
 
     defaultConfig {
@@ -24,7 +25,7 @@ android {
 
 dependencies {
     if (!isModule.toBoolean()){
-        implementation project(Modules.module_pet)
+        implementation project(Modules.module_visitor)
     }
     implementation project(Modules.lib_common)
     implementation Libs.arouter_api
