--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,10 @@ android {
         versionName Builds.versionName
     }
 
+    buildFeatures {
+        viewBinding true
+    }
+
 }
 
 dependencies {
@@ -29,5 +33,9 @@ dependencies {
     }
     implementation project(Modules.lib_common)
     implementation Libs.arouter_api
+    implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     kapt Libs.arouter_compiler
+
 }
