--- a/module_visitor/build.gradle
+++ b/module_visitor/build.gradle
@@ -27,10 +27,17 @@ android {
             }
         }
     }
+
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
     implementation project(Modules.lib_common)
     implementation Libs.arouter_api
+    implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     kapt Libs.arouter_compiler
 }
