--- a/module_visitor/src/main/module/AndroidManifest.xml
+++ b/module_visitor/src/main/module/AndroidManifest.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.studio.module_pet">
+    package="com.studio.module_visitor">
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/pet_module_name"
+        android:label="@string/visitor_module_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Ladon">
 
         <activity
-            android:name=".view.MainActivity"
+            android:name=".view.VisitorMainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,9 +19,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".view.TestActivity"
-            android:exported="false" />
+        <activity android:name=".view.VisitorLoginActivity"/>
+
     </application>
 
 </manifest>
